# yambd

./: .flake8  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
api_yamdb/: manage.py
api_yamdb/api/: permissions.py  sendmail.py  serializers.py  validators.py  views.py
api_yamdb/api/urls/: __init__.py  v1.py
api_yamdb/api_yamdb/: settings.py  urls.py
api_yamdb/core/management/commands/: clear_db.py  load_db.py
api_yamdb/reviews/: admin.py  models.py
api_yamdb/reviews/migrations/: 0001_initial.py  0002_initial.py  0003_title_description.py  0004_alter_title_name.py  0005_auto_20230516_1454.py  0006_auto_20230519_0830.py  0007_alter_title_description.py  0008_alter_title_rating.py  0009_remove_title_rating.py  0010_auto_20230523_0745.py  0011_auto_20230524_0625.py
api_yamdb/users/: models.py
api_yamdb/users/migrations/: 0001_initial.py  0002_auto_20230517_1922.py  0003_alter_customuser_options.py  0004_auto_20230524_1147.py  0005_alter_customuser_options.py
